Updated supervisord config. Supervisord will exit when citserver/webcit exits or crashes.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 logfile = /var/log/supervisord.log
+pidfile = /var/run/supervisord.pid
 loglevel = info
 nodaemon = true
 
@@ -20,6 +21,10 @@ startsecs = 10
 startretries = 5
 stdout_logfile=/var/log/supervisor_log/%(program_name)s.log
 stderr_logfile=/var/log/supervisor_log/%(program_name)s.log
+
+[eventlistener:processes]
+command=/etc/supervisor/stop-supervisor.sh
+events=PROCESS_STATE_STOPPED, PROCESS_STATE_EXITED, PROCESS_STATE_FATAL
 
 [unix_http_server]
 file=/var/run/supervisor.sock
