--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,8 +5,8 @@ loglevel = info
 nodaemon = true
 
 [program:citadel]
-command = /usr/local/citadel/citserver -h/usr/local/citadel
-priority = 1
+command = /usr/local/citadel/citserver -h/usr/local/citadel -lsyslog -lauth
+priority = 2
 autostart = true
 startsecs = 10
 startretries = 5
@@ -15,7 +15,7 @@ stderr_logfile=/var/log/supervisor_log/%(program_name)s.log
 
 [program:webcit]
 command = /usr/local/webcit/webcit -p80 uds /usr/local/citadel
-priority = 2
+priority = 3
 autostart = true
 startsecs = 10
 startretries = 5
